# z3.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: format.yml  (+1 more)
benchmark_results/: 11-22-24.json
examples/: array2dim_copy.vmt  array2dim_init.vmt  array2dim_init_i.vmt  array2dim_init_j.vmt  array2dim_rec1.vmt  array2dim_rec2.vmt  array_append2_array_horn.vmt  array_bubble_sort.vmt  array_bubble_sort_rev.vmt  array_copy.vmt  array_copy_increment.vmt  array_copy_increment_ind.vmt  array_copy_ind.vmt  array_copy_inverse.vmt  array_copy_nondet_add.vmt  array_copy_sum.vmt  array_copy_sum_ind.vmt  array_doub_access_init.vmt  array_doub_access_init_const.vmt  array_double_inverse.vmt  array_equiv_1.vmt  array_equiv_2.vmt  array_equiv_3.vmt  array_even_odd_1.vmt  array_even_odd_2.vmt  array_horn_copy2.vmt  array_hybr_add.vmt  array_hybr_nest_1.vmt  array_hybr_nest_2.vmt  array_hybr_nest_3.vmt  array_hybr_nest_4.vmt  array_hybr_nest_5.vmt  array_index_compl.vmt  array_init_addvar.vmt  array_init_addvar2.vmt  array_init_addvar4.vmt  array_init_addvar5.vmt  array_init_addvar6.vmt  array_init_addvar7.vmt  array_init_and_copy.vmt  (+149 more)
garden/: Cargo.toml
smt2parser/: Cargo.toml
smt2parser/bmc/: german.smt2  out.smt2
smt2parser/examples/: flash-eager.vmt  german.vmt  scatter.vmt  simple.vmt
smt2parser/src/: concrete.rs  let_extract.rs  lexer.rs  lib.rs  main.rs  parser.rs  renaming.rs
smt2parser/src/vmt/: action.rs  array_abstractor.rs  axiom.rs  bmc.rs  canonicalize_boolean.rs  frame_num_getter.rs  instantiator.rs  mod.rs  numbered_to_symbolic.rs  smt.rs  term_extractor.rs  utils.rs  variable.rs
smt2parser/tests/: abstract.vmt  concrete.vmt
src/: abstract_rewriter.rs  analysis.rs  array_axioms.rs  benchmark.rs  conflict_scheduler.rs  cost.rs  egg_utils.rs  interpolant.rs  lib.rs  logger.rs  main.rs  utils.rs  z3_var_context.rs
tests/: integration_tests.rs  snapshot_tests.rs
(+387 files in other folders)
